@@ -1,0 +1,46 @@
+<Project name="AddIn" fileversion="2.0" language="C#" ctype="DotNetProject">
+  <Configurations>
+    <Configuration name="Debug" ctype="DotNetProjectConfiguration">
+      <Output directory="../../../build/AddIns/VersionControl" assembly="VersionControlAddIn" />
+      <Build executeAfterBuild="./mds_postbuild.sh" debugmode="True" target="Library" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+    <Configuration name="Release" ctype="DotNetProjectConfiguration">
+      <Output directory="../../../build/AddIns/VersionControl" assembly="VersionControlAddIn" />
+      <Build debugmode="False" target="Library" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+  </Configurations>
+  <References>
+    <ProjectReference type="Project" localcopy="True" refto="VersionControl" />
+    <ProjectReference type="Project" localcopy="True" refto="DiffWidget" />
+    <ProjectReference type="Project" localcopy="True" refto="Diff" />
+    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.6.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.Base.dll" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.Core.dll" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.Dock.dll" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.exe" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.Gui.Utils.dll" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.Gui.Widgets.dll" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../build/bin/MonoDevelop.SourceEditor.dll" />
+  </References>
+  <DeploymentInformation strategy="File">
+    <excludeFiles />
+  </DeploymentInformation>
+  <Contents>
+    <File name="./Addin.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Diffs.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Logs.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Statuses.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Task.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Update.cs" subtype="Code" buildaction="Compile" />
+    <File name="./VersionControl.addin.xml" subtype="Code" buildaction="Nothing" />
+    <File name="./overlay_added.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./overlay_conflicted.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./overlay_locked.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./overlay_modified.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./overlay_normal.png" subtype="Code" buildaction="EmbedAsResource" />
+  </Contents>
+</Project>
