@@ -7,6 +7,7 @@ using Gtk;
 using MonoDevelop.Gui;
 using MonoDevelop.Core;
 using MonoDevelop.Gui.Pads;
+using MonoDevelop.Gui.Pads.ProjectPad;
 using MonoDevelop.Internal.Project;
 using MonoDevelop.Commands;
 using MonoDevelop.Services;
@@ -42,47 +43,96 @@ namespace VersionControlPlugin {
 	}
 	
 	public class VersionControlNodeExtension : NodeBuilderExtension {
+		Hashtable projectsWatched = new Hashtable();
+		Hashtable fileStatus = new Hashtable();
+	
 		public override bool CanBuildNode (Type dataType) {
 			//Console.Error.WriteLine(dataType);
 			return typeof(ProjectFile).IsAssignableFrom (dataType)
-				|| typeof(DotNetProject).IsAssignableFrom (dataType);
-				// TODO: Folders
+				|| typeof(DotNetProject).IsAssignableFrom (dataType)
+				|| typeof(ProjectFolder).IsAssignableFrom (dataType)
+				|| typeof(Combine).IsAssignableFrom (dataType);
 		}		
 		
 		public override void BuildNode (ITreeBuilder builder, object dataObject, ref string label, ref Gdk.Pixbuf icon, ref Gdk.Pixbuf closedIcon) {
 			// Add status overlays
-			
-			// TODO: Watch the files in some way to detect
-			// when the overlay should be changed.
 			
 			if (!(dataObject is ProjectFile)) return;
 			if (!builder.Options["ShowVersionControlOverlays"])
 				return;
 		
 			ProjectFile file = (ProjectFile) dataObject;
+			
+			WatchProject(file.Project);
+			
+			// When a file had a status and later has no status,
+			// for whatever reason, it needs to be removed from the hashtable.
+			fileStatus.Remove(file.FilePath);
+			
 			try {
-				foreach (VersionControlSystem vc in VersionControlService.Providers) {
-					if (vc.IsFileStatusAvailable(file.FilePath)) {
-						Node node = vc.GetFileStatus(file.FilePath, false);
-						
-						Gdk.Pixbuf overlay = VersionControlService.LoadIconForStatus(node.Status);
-						
-						double scale = (double)(2*icon.Width/3) / (double)overlay.Width;
-						int w = (int)(overlay.Width*scale);
-						int h = (int)(overlay.Height*scale);
-						icon = icon.Copy();
-						overlay.Composite(icon,
-							icon.Width-w,  icon.Height-h,
-							w, h,
-							icon.Width-w, icon.Height-h,
-							scale,scale, Gdk.InterpType.Bilinear, 255); 
-						break;
-					}
-				}
+				NodeStatus status = GetStatus(file.FilePath);
+				if (status == NodeStatus.Unknown) return;
+				
+				fileStatus[file.FilePath] = status;
+				
+				Gdk.Pixbuf overlay = VersionControlService.LoadIconForStatus(status);
+				
+				double scale = (double)(2*icon.Width/3) / (double)overlay.Width;
+				int w = (int)(overlay.Width*scale);
+				int h = (int)(overlay.Height*scale);
+				icon = icon.Copy();
+				overlay.Composite(icon,
+					icon.Width-w,  icon.Height-h,
+					w, h,
+					icon.Width-w, icon.Height-h,
+					scale,scale, Gdk.InterpType.Bilinear, 255); 
 			} catch (Exception e) {
-				Console.Error.WriteLine(e);
 			}
 		}
+		
+		NodeStatus GetStatus(string filepath) {
+			foreach (VersionControlSystem vc in VersionControlService.Providers) {
+				if (vc.IsFileStatusAvailable(filepath)) {
+					Node node = vc.GetFileStatus(filepath, false);
+					return node.Status;
+				}
+			}
+			return NodeStatus.Unknown;
+		}
+		
+		void WatchProject(Project project) {
+			if (projectsWatched.ContainsKey(project)) return;
+			projectsWatched[project] = projectsWatched;
+			project.FileChangedInProject += new ProjectFileEventHandler(Monitor);
+		}
+		
+		void Monitor(object sender, ProjectFileEventArgs args) {
+			// If the status of the file actually changed, then
+			// update the project pad so the overlays are updated.
+			
+			string file = args.ProjectFile.FilePath;
+			
+			NodeStatus newstatus = GetStatus(file);
+			if (newstatus == NodeStatus.Unknown && !fileStatus.ContainsKey(file))
+				return; // had no status before, has no status now
+
+			if (!fileStatus.ContainsKey(file)
+				|| (fileStatus.ContainsKey(file) 
+					&& (NodeStatus)fileStatus[file] != newstatus)) {
+				// No status before and has status now, or
+				// status changed.  Refresh the project pad.
+				ITreeBuilder builder = Context.GetTreeBuilder(args.ProjectFile);
+				if (builder != null)
+					builder.UpdateAll();
+			}
+		}
+		
+		public override void Dispose() {
+			foreach (Project p in projectsWatched.Keys)
+				p.FileChangedInProject -= new ProjectFileEventHandler(Monitor);
+			projectsWatched.Clear();
+		}
+		
 		
 		public override Type CommandHandlerType {
 			get { return typeof(AddinCommandHandler); }
@@ -144,7 +194,7 @@ namespace VersionControlPlugin {
 		private bool RunCommand(Commands cmd, bool test) {
 			string path;
 			bool isDir;
-		
+			
 			if (CurrentNode.DataItem is ProjectFile) {
 				ProjectFile file = (ProjectFile)CurrentNode.DataItem;
 				path = file.FilePath;
@@ -153,6 +203,14 @@ namespace VersionControlPlugin {
 				DotNetProject project = (DotNetProject)CurrentNode.DataItem;
 				path = project.BaseDirectory;
 				isDir = true;
+			} else if (CurrentNode.DataItem is ProjectFolder) {
+				ProjectFolder f = ((ProjectFolder)CurrentNode.DataItem);
+				path = f.Path;
+				isDir = true;				
+			} else if (CurrentNode.DataItem is Combine) {
+				Combine c = ((Combine)CurrentNode.DataItem);
+				path = c.BaseDirectory;
+				isDir = true;				
 			} else {
 				Console.Error.WriteLine(CurrentNode.DataItem);
 				return false;
