@@ -1,0 +1,2 @@
+#!/bin/sh
+cp VersionControl.addin.xml ../../../build/AddIns/VersionControl
