@@ -1,0 +1,28 @@
+<Project name="Diff" fileversion="2.0" language="C#" ctype="DotNetProject">
+  <Configurations>
+    <Configuration name="Debug" ctype="DotNetProjectConfiguration">
+      <Output directory="../../../build/AddIns/VersionControl" assembly="Diff" />
+      <Build debugmode="True" target="Library" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+    <Configuration name="Release" ctype="DotNetProjectConfiguration">
+      <Output directory="../../../build/AddIns/VersionControl" assembly="Diff" />
+      <Build debugmode="False" target="Exe" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+  </Configurations>
+  <References />
+  <DeploymentInformation strategy="File">
+    <excludeFiles />
+  </DeploymentInformation>
+  <Contents>
+    <File name="./Diff.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Merge.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Patch.cs" subtype="Code" buildaction="Compile" />
+    <File name="./StructuredDiff.cs" subtype="Code" buildaction="Compile" />
+    <File name="./TextDiff.cs" subtype="Code" buildaction="Compile" />
+    <File name="./UnifiedDiff.cs" subtype="Code" buildaction="Compile" />
+  </Contents>
+</Project>
