@@ -1,0 +1,28 @@
+<Combine name="VersionControl" fileversion="2.0">
+  <Configurations>
+    <Configuration name="Debug" ctype="CombineConfiguration">
+      <Entry build="True" name="VersionControl" />
+      <Entry build="True" name="Diff" />
+      <Entry build="True" name="DiffWidget" />
+      <Entry build="True" name="AddIn" />
+    </Configuration>
+    <Configuration name="Release" ctype="CombineConfiguration">
+      <Entry build="True" name="VersionControl" />
+      <Entry build="True" name="Diff" />
+      <Entry build="True" name="DiffWidget" />
+      <Entry build="True" name="AddIn" />
+    </Configuration>
+  </Configurations>
+  <StartMode startupentry="VersionControl" single="True">
+    <Execute type="None" entry="VersionControl" />
+    <Execute type="None" entry="Diff" />
+    <Execute type="None" entry="DiffWidget" />
+    <Execute type="None" entry="AddIn" />
+  </StartMode>
+  <Entries>
+    <Entry filename="./VersionControl/VersionControl.mdp" />
+    <Entry filename="./Diff/Diff.mdp" />
+    <Entry filename="./DiffWidget/DiffWidget.mdp" />
+    <Entry filename="./AddIn/AddIn.mdp" />
+  </Entries>
+</Combine>
